@@ -22,5 +22,13 @@
     "item-storagelinker-iron": "Storage Linker (Iron)",
     "item-storagelinker-steel": "Storage Linker (Steel)",
     
-    "itemdesc-storagelinker-*": "Device to link containers to a controller. Left Click on controller first. Then Left Click on containers to link them to that controller. Shift+Left Click to unlink the container from the controller."
+    "itemdesc-storagelinker-*": "Device to link containers to a controller. Left Click on controller first. Then Left Click on containers to link them to that controller. Shift+Left Click to unlink the container from the controller.",
+      "item-storagecontrollerupgrade-tinbronze": "Storage Controller Upgrade (to Tin Bronze)",
+      "item-storagecontrollerupgrade-bismuthbronze": "Storage Controller Upgrade (to Bismuth Bronze)",
+      "item-storagecontrollerupgrade-blackbronze": "Storage Controller Upgrade (to Black Bronze)",
+      "item-storagecontrollerupgrade-iron": "Storage Controller Upgrade (to Iron)",
+      "item-storagecontrollerupgrade-meteoriciron": "Storage Controller Upgrade (to Meteoric Iron)",
+      "item-storagecontrollerupgrade-steel": "Storage Controller Upgrade (to Steel)",
+      "item-storagecontrollerupgrade-cupronickel": "Storage Controller Upgrade (to Cupronickel)",
+      "itemdesc-storagecontrollerupgrade-*": "Upgrades a lower tier storage controller to a higher one. Right click on a placed storage controller to use. Any items in the controller will be dropped, but the controller will remember the containers it is linked to. (You can't upgrade between bronze types)'"
 }
