@@ -1,0 +1,12 @@
+{
+	ingredientPattern: "US",
+	ingredients: {
+		"U": { type: "item", code: "game:ingot-cupronickel",  quantity: 8 },
+		"S": { type: "item", code: "storagelinker-*", "quantity": 0  }
+		
+	},
+	width: 2,
+	height: 1,
+	shapeless: true,
+	output: { type: "item", code: "storagecontrollerupgrade-cupronickel", quantity: 1  }
+}
